# cc-mnemos

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cc_mnemos/: __init__.py  _memorize_persistence.py  _search_worker.py  batch_import.py  chunker.py  cli.py  codex_history.py  config.py  embedder.py  memorize.py  project.py  prompt_inject.py  recall.py  search_worker_control.py  server.py  source_classifier.py  store.py  tagger.py
tests/: conftest.py  test_batch_import.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_init.py  test_memorize.py  test_memorize_persistence.py  test_project.py  test_prompt_inject.py  test_recall.py  test_search_worker.py  test_server.py  test_store.py  test_tagger.py
tests/fixtures/: codex_history.jsonl  codex_session.jsonl  sample_transcript.jsonl
