[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-mnemos"
version = "0.1.0"
description = "Long-term memory system for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "shuyo" },
]
keywords = ["claude-code", "memory", "mcp", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sentence-transformers>=5.0.0",
    "sqlite-vec>=0.1.0",
    "fastmcp>=3.0.0",
    "numpy>=1.24.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
cc-mnemos = "cc_mnemos.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
